--- a/apps/login/templates/login/dashboard.html
+++ b/apps/login/templates/login/dashboard.html
@@ -25,6 +25,7 @@
     <body>
         <h1>Welcome!</h1>
         <p>Your keys!</p>
+        <a href="{% url 'key_register' %}">Add key</a>
         <table>
             <thead>
                 <tr>
