--- a/apps/accounts/templates/accounts/authenticate.html
+++ b/apps/accounts/templates/accounts/authenticate.html
@@ -14,51 +14,45 @@
 </head>
 <body>
     <div>
-        <h1>Authenticate Keys</h1>
+        <h1>Authenticate Key</h1>
         <p>Plug your key in immediately</p>
 
 		<script>
 			var csrftoken = Cookies.get('csrftoken');
-			fetch('/register/begin', {
+			fetch("{% url 'start_auth' %}", {
 				method: 'POST',
 				headers: {
 					'X-CSRFToken': csrftoken
 				}
 			}).then(function(response) {
-				// if(response.ok) {
-				// 	return response.arrayBuffer();
-				// }
-				  // throw new Error('Error getting registration data!');
-				// var proxy =  new Uint32Array(response.arrayBuffer());
-				// return response.arrayBuffer();
-				return response.arrayBuffer();
-				
+				if(response.ok) {
+					return response.arrayBuffer();
+				}
+				throw new Error('No credential available to authenticate!');
 			}).then(CBOR.decode).then(function(options) {
-				console.log(options, 'response.arraybuff is fine to me')
-				//This line below is not working
-				return navigator.credentials.create(options);
-			}).then(function(attestation) {
-				console.log("Start fetch")
-				return fetch('/register/complete', {
+				return navigator.credentials.get(options);
+			}).then(function(assertion) {
+				return fetch("{% url 'finish_auth' %}", {
 					method: 'POST',
 					headers: {
-						'Content-Type': 'application/cbor', 
+						'Content-Type': 'application/cbor',
 						'X-CSRFToken': csrftoken
 					},
 					body: CBOR.encode({
-						"attestationObject": new Uint8Array(attestation.response.attestationObject),
-						"clientDataJSON": new Uint8Array(attestation.response.clientDataJSON),
+						"credentialId": new Uint8Array(assertion.rawId),
+						"authenticatorData": new Uint8Array(assertion.response.authenticatorData),
+						"clientDataJSON": new Uint8Array(assertion.response.clientDataJSON),
+						"signature": new Uint8Array(assertion.response.signature)
 					})
-				});
+			})
 			}).then(function(response) {
 				var stat = response.ok ? 'successful' : 'unsuccessful';
-				alert('Registration ' + stat + ' More details in server log...');
-			}, //function(reason) {
-				//alert(reason);
-			);
-			//}).then(function() {
-			//window.location = '/';
-			//});
+				alert('Authentication ' + stat + ' More details in server log...');
+			}, function(reason) {
+			alert(reason);
+			}).then(function() {
+			window.location = '/';
+			});
 		</script>
 
 		<!-- <script> 
