--- a/apps/accounts/templates/accounts/authenticate.html
+++ b/apps/accounts/templates/accounts/authenticate.html
@@ -17,78 +17,57 @@
         <h1>Authenticate Key</h1>
         <p>Plug your key in immediately</p>
 
+		
+		<input type="text" id="username">
+		<button onclick='start_auth()' >Submit</button>
+		
+
 		<script>
+			
 			var csrftoken = Cookies.get('csrftoken');
-			fetch("{% url 'start_auth' %}", {
-				method: 'POST',
-				headers: {
-					'X-CSRFToken': csrftoken
-				}
-			}).then(function(response) {
-				if(response.ok) {
-					return response.arrayBuffer();
-				}
-				throw new Error('No credential available to authenticate!');
-			}).then(CBOR.decode).then(function(options) {
-				return navigator.credentials.get(options);
-			}).then(function(assertion) {
-				return fetch("{% url 'finish_auth' %}", {
+			function start_auth() {
+				var username = document.getElementById("username").value;
+				console.log('firing')
+				console.log(username)
+				fetch("{% url 'start_auth' %}", {
 					method: 'POST',
 					headers: {
-						'Content-Type': 'application/cbor',
+						'Content-Type': 'application/json',
 						'X-CSRFToken': csrftoken
 					},
-					body: CBOR.encode({
-						"credentialId": new Uint8Array(assertion.rawId),
-						"authenticatorData": new Uint8Array(assertion.response.authenticatorData),
-						"clientDataJSON": new Uint8Array(assertion.response.clientDataJSON),
-						"signature": new Uint8Array(assertion.response.signature)
-					})
-			})
-			}).then(function(response) {
-				var stat = response.ok ? 'successful' : 'unsuccessful';
-				alert('Authentication ' + stat + ' More details in server log...');
-			}, function(reason) {
-			alert(reason);
-			}).then(function() {
-			window.location = '/';
-			});
-		</script>
-
-		<!-- <script> 
-			var csrftoken = Cookies.get('csrftoken')
-			fetch('/register/begin', {
-				method: 'POST',
-				// headers: {
-				// 	'X-CSRFToken': csrftoken
-				// }
-			}).then(function(response) {
-				data = console.log('Response is ...', response)
-				if(response.ok) return data, response.arrayBuffer();
-			
-				throw new Error('Error getting registration data!');
-			}).then(CBOR.decode).then(function(options) {
-				data2 = console.log('Ok options is..', options)
-				return data2, navigator.credentials.create(options);
-
-			}).then(function(attestation) {
-				console.log("Ok created the credentials now fetching it")
-				return fetch('/register/complete', {
-					method: 'POST',
-					headers: {'Content-Type': 'application/cbor'},
-					body: CBOR.encode({
-						"attestationObject": new Uint8Array(attestation.response.attestationObject),
-						"clientDataJSON": new Uint8Array(attestation.response.clientDataJSON),
-					})
+					body: JSON.stringify({'username': username})
+				}).then(function(response) {
+					if(response.ok) {
+						return response.arrayBuffer();
+					}
+					throw new Error('No credential available to authenticate!');
+				}).then(CBOR.decode).then(function(options) {
+					return navigator.credentials.get(options);
+				}).then(function(assertion) {
+					return fetch("{% url 'finish_auth' %}", {
+						method: 'POST',
+						headers: {
+							'Content-Type': 'application/cbor',
+							'X-CSRFToken': csrftoken
+						},
+						body: CBOR.encode({
+							"credentialId": new Uint8Array(assertion.rawId),
+							"authenticatorData": new Uint8Array(assertion.response.authenticatorData),
+							"clientDataJSON": new Uint8Array(assertion.response.clientDataJSON),
+							"signature": new Uint8Array(assertion.response.signature)
+						}),
+						username
+				})
+				}).then(function(response) {
+					var stat = response.ok ? 'successful' : 'unsuccessful';
+					alert('Authentication ' + stat + ' More details in server log...');
+				}, function(reason) {
+					alert(reason);
+				}).then(function() {
+				window.location = '/';
 				});
-			}).then(function(response) {
-				var stat = response.ok ? 'successful' : 'unsuccessful';
-				alert('Registration ' + stat + ' More details in server log...');
-			}, function(reason) {
-				alert(reason);
-			});
+			}
 		</script>
-		-->
     </div>
 </body>
 </html>
