--- a/apps/accounts/templates/accounts/home.html
+++ b/apps/accounts/templates/accounts/home.html
@@ -12,6 +12,7 @@
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a> |
-  <a href="{% url 'signup' %}">signup</a>
+  <a href="{% url 'signup' %}">signup</a>|
+  <a href="{% url 'auth' %}">key_login</a>
 {% endif %}
 {% endblock %}
