--- a/apps/accounts/templates/accounts/home.html
+++ b/apps/accounts/templates/accounts/home.html
@@ -3,7 +3,7 @@
 
 {% block title %}Home{% endblock %}
 
-{% block content %}
+{% comment %} {% block content %} {% endcomment %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
 
@@ -15,4 +15,4 @@
   <a href="{% url 'signup' %}">signup</a>|
   <a href="{% url 'auth' %}">key_login</a>
 {% endif %}
-{% endblock %}
+{% comment %} {% endblock %} {% endcomment %}
