--- a/apps/accounts/templates/accounts/base.html
+++ b/apps/accounts/templates/accounts/base.html
@@ -1,15 +1,5 @@
 <!-- templates/base.html -->
-{% extends 'master_base.html' %}
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
-</head>
-<body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-</body>
-</html>
+{% comment %} {% extends 'master_base.html' %}
+<title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+{% block content %}
+{% endblock %} {% endcomment %}
