--- a/apps/accounts/templates/accounts/dashboard.html
+++ b/apps/accounts/templates/accounts/dashboard.html
@@ -1,7 +1,6 @@
 {% extends 'master_base.html' %}
 {% block content %}
 {% comment %} <button onclick="registerKey()">Add Key</button> {% endcomment %}
-{% comment %} <p><a href="{% url 'logout' %}">logout</a></p> {% endcomment %}
 
 <div class="mdc-layout-grid">
     <!-- One horizontal level grid works in scale of 12-->
@@ -11,7 +10,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell"></div>
                 <div class="mdc-layout-grid__cell">
-                    <h2 class="mdc-typography">Hi, {{ user.username }}</h2>
+                    <h2 class="mdc-typography">Your Keys</h2>
                 </div>
                 <div class="mdc-layout-grid__cell"></div>
             </div>
@@ -22,50 +21,48 @@
         <div class="mdc-layout-grid__cell--span-2"></div>
         <div class="mdc-layout-grid__cell--span-8">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell--span-6">
-                    {% comment %} <div class="card-config mdc-card--outlined">
-                        <div class="mdc-card__primary-action" tabindex="0">
-                            <div class="key-card__media mdc-card__media mdc-card__media--16-9">
-                                <div class="mdc-card__media-content"></div>
-                            </div>
-                        </div>
-                        <span class="mdc-button__label">All Business Headlines</span>
-                        <div class="mdc-card__actions">
-                            <button class="mdc-button mdc-card__action mdc-card__action--button">
-                                <span class="mdc-button__label">Edit</span>
-                            </button>
-                            <button class="mdc-button mdc-card__action mdc-card__action--button">
-                                <span class="mdc-button__label">Delete</span>
-                            </button>
-                        </div>
-                    </div>  {% endcomment %}
-                    <div class="mdc-card">
-                        <div class="mdc-card__primary-action">
-                            <div class="mdc-card__media mdc-card__media--square">
-                            <div class="mdc-card__media-content">Title</div>
-                            </div>
-                            <!-- ... additional primary action content ... -->
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                            <button class="mdc-button mdc-card__action mdc-card__action--button">
-                                <span class="mdc-button__label">Action 1</span>
-                            </button>
-                            <button class="mdc-button mdc-card__action mdc-card__action--button">
-                                <span class="mdc-button__label">Action 2</span>
-                            </button>
-                            </div>
-                            <div class="mdc-card__action-icons">
-                            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" title="Share">share</button>
-                            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" title="More options">more_vert</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="mdc-layout-grid__cell">
+                    <h2 class="mdc-typography">Your Keys</h2>
                 </div>
+                <div class="mdc-layout-grid__cell"></div>
+                <div class="mdc-layout-grid__cell"></div>
             </div>
         </div>
         <div class="mdc-layout-grid__cell--span-2"></div>
     </div>
+    <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell--span-2"></div>
+        <div class="mdc-layout-grid__cell--span-8">
+            <div class="mdc-layout-grid__inner">
+                {% for key in all_keys %}
+                <div class="mdc-layout-grid__cell--span-6">                    
+                    <div class="mdc-card" style="background-color: #00E676;">
+                        <div class='card-content'>
+                            <h2 class="mdc-typography">Name: {{ key.name }}</h2>
+                            <p class="mdc-typography">Registered: {{ key.created_at }} </p>
+                            <p class="mdc-typography">Last Used: {{ key.last_used }} </p>
+                        </div>
+                        <div class="mdc-card__actions">
+                            <div class="mdc-card__action-buttons">
+                                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                                    <span class="mdc-button__label">Edit</span>
+                                </button>
+                                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                                    <span class="mdc-button__label">Delete</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>            
+        </div>
+        <div class="mdc-layout-grid__cell--span-2"></div>
+    </div>
 </div>
+
+<script> 
+
+</script>
 
 {% endblock %}
