--- a/apps/accounts/templates/accounts/home.html
+++ b/apps/accounts/templates/accounts/home.html
@@ -4,8 +4,20 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <p>Welcome</p>
-  <a href="{% url 'login' %}">login</a> |
-  <a href="{% url 'signup' %}">signup</a>|
-  <a href="{% url 'auth' %}">key_login</a>
+	<div class="mdc-layout-grid">
+    <!-- One horizontal level grid works in scale of 12-->
+	<div class="mdc-layout-grid__inner">
+		<div class="mdc-layout-grid__cell--span-2"></div>
+		<div class="mdc-layout-grid__cell--span-8">
+			<div class="mdc-layout-grid__inner">
+				<div class="mdc-layout-grid__cell"></div>
+				<div class="mdc-layout-grid__cell">
+					<h2 class="mdc-typography">Welcome!</h2>
+				</div>
+				<div class="mdc-layout-grid__cell"></div>
+			</div>
+		</div>
+		<div class="mdc-layout-grid__cell--span-2"></div>
+	</div>
+</div>
 {% endblock %}
